--- a/index.html
+++ b/index.html
@@ -1,22 +1,82 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tea House</title>
 
+    <!-- manrope font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet">
 
-    
+    <!-- font awesome cdn     -->
+    <script src="https://kit.fontawesome.com/af7a27122f.js" crossorigin="anonymous"></script>
+
+    <!-- tailwind css -->
+    <script src="https://cdn.tailwindcss.com"></script>
+
+    <script>
+        tailwind.config = {
+            theme: {
+                extend: {
+                    colors: {
+                        clifford: '#da373d',
+                    }
+                }
+            }
+        }
+    </script>
 
     <style>
-
+        .manrope-font {
+            font-family: "Manrope", serif;
+            font-style: normal;
+        }
     </style>
 
 </head>
-<body>
-    
+<body class="manrope-font max-w-screen-2xl mx-auto px-16 lg:px-28 bg-purple-50">
+    <!-- header content -->
+    <header class="md:flex pt-10 mb-20 items-center ">
+        <!-- text content -->
+        <div class="w-full mb-10">
+            <h1 class="text-5xl font-extrabold md:text-7xl text-[#1C1C1C]">
+                It's good
+                <br>
+                tea time at The
+                <br>
+                Tea House
+            </h1>
+            <br>
+            <p class="text-gray-500 font-medium text-xs">
+                Tea and Botanical Solutions Supplier Give Optimum <br> Satisfaction To Your Taste Buds.
+            </p>
+            <br>
+            <button class="bg-gradient-to-r from-[#FF8938] to-[#FF0000] px-4 py-3 rounded-xl text-[#FFFFFF] font-bold text-xl gap-3 flex items-center">
+                <p>Explore More</p> <i class="fa-solid fa-arrow-right -rotate-45 font-semibold"></i>
+            </button>
+        </div>
+        <!-- image content -->
+        <div class="relative">
+            <!-- image -->
+            <div class="w-full">
+                <img class="w-full" src="images/banner.png" alt="">
+            </div>
+            <!-- card -->
+            <div class="bg-white flex items-center px-2 py-2 md:px-4 lg:px-6 lg:py-3 rounded-xl gap-3 absolute shadow-md top-40 left-2 md:top-56 md:left-10 lg:top-64 lg:left-10">
+                <!-- icon -->
+                <div><i class="fa-solid fa-star text-[#FFC850] text-xl"></i></div>
+                <!-- text -->
+                <div class="">
+                    <h2 class="text-2xl font-extrabold">5.00</h2>
+                    <p class="text-gray-500 font-medium text-xs">Trust Pilot Ratings</p>
+                </div> 
+            </div> 
+        </div>
+    </header>
+
 </body>
+
 </html>
