--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </style>
 
 </head>
-<body class="manrope-font max-w-screen-2xl mx-auto px-16 lg:px-28 bg-purple-50">
+<body class="manrope-font max-w-screen-2xl mx-auto px-5 md:px-16 lg:px-28 bg-purple-50">
     <!-- header content -->
     <header class="md:flex pt-10 mb-20 items-center ">
         <!-- text content -->
@@ -65,7 +65,7 @@
                 <img class="w-full" src="images/banner.png" alt="">
             </div>
             <!-- card -->
-            <div class="bg-white flex items-center px-2 py-2 md:px-4 lg:px-6 lg:py-3 rounded-xl gap-3 absolute shadow-md top-40 left-2 md:top-56 md:left-10 lg:top-64 lg:left-10">
+            <div class="bg-white flex items-center px-2 py-2 md:px-4 lg:px-6 lg:py-3 rounded-xl gap-3 absolute shadow-md top-56 left-10 md:top-56 md:left-10 lg:top-64 lg:left-10">
                 <!-- icon -->
                 <div><i class="fa-solid fa-star text-[#FFC850] text-xl"></i></div>
                 <!-- text -->
@@ -76,6 +76,47 @@
             </div> 
         </div>
     </header>
+    <main>
+        <!-- feature section start -->
+        <section class="py-8 md:py-24">
+            <div class="text-center mb-12">
+                <h2 class="text-[#1C1C1C] text-2xl md:text-4xl font-extrabold mb-2">Our Featured Products</h2>
+                <p class="text-gray-500 font-medium text-xs w-full md:max-w-2xl mx-auto"> 
+                    There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. 
+                </p>
+            </div>
+            <div class="grid grid-cols-2 md:grid-cols-4 gap-4 text-center">
+                <div class="py-5 px-10 bg-gray-100 rounded-xl shadow-md">
+                    <img class="pt-4 mx-auto" src="images/tea-1.png" alt="">
+                    <div class="text-center">
+                        <h4 class="text-xl font-extrabold pt-3 pb-1">Milk Tea</h4>
+                        <p class="text-gray-500 font-medium text-xs">Creamer could be replaced by fresh milk</p>
+                    </div>
+                </div>
+                <div class="py-5 px-10 bg-gray-100 rounded-xl shadow-md">
+                    <img class="pt-4 mx-auto" src="images/tea-2.png" alt="">
+                    <div class="text-center">
+                        <h4 class="text-xl font-extrabold pt-3 pb-1">Black Tea</h4>
+                        <p class="text-gray-500 font-medium text-xs">Creamer could be replaced by fresh milk</p>
+                    </div>
+                </div>
+                <div class="py-5 px-10 bg-gray-100 rounded-xl shadow-md">
+                    <img class="pt-4 mx-auto" src="images/tea-3.png" alt="">
+                    <div class="text-center">
+                        <h4 class="text-xl font-extrabold pt-3 pb-1">Lemon Tea</h4>
+                        <p class="text-gray-500 font-medium text-xs">Creamer could be replaced by fresh milk</p>
+                    </div>
+                </div>
+                <div class="py-5 px-10 bg-gray-100 rounded-xl shadow-md">
+                    <img class="pt-4 mx-auto" src="images/tea-4.png" alt="">
+                    <div class="text-center">
+                        <h4 class="text-xl font-extrabold pt-3 pb-1">Green Tea</h4>
+                        <p class="text-gray-500 font-medium text-xs">Creamer could be replaced by fresh milk</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
 
 </body>
 
