--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                     There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. 
                 </p>
             </div>
-            <div class="grid grid-cols-2 md:grid-cols-4 gap-4 text-center">
+            <div class="grid md:grid-cols-4 gap-4 text-center">
                 <div class="py-5 px-10 bg-gray-100 rounded-xl shadow-md">
                     <img class="pt-4 mx-auto" src="images/tea-1.png" alt="">
                     <div class="text-center">
