--- a/index.html
+++ b/index.html
@@ -85,35 +85,71 @@
                     There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. 
                 </p>
             </div>
-            <div class="grid md:grid-cols-4 gap-4 text-center">
+            <div class="grid md:grid-cols-4 gap-6 text-center">
                 <div class="py-5 px-10 bg-gray-100 rounded-xl shadow-md">
                     <img class="pt-4 mx-auto" src="images/tea-1.png" alt="">
                     <div class="text-center">
-                        <h4 class="text-xl font-extrabold pt-3 pb-1">Milk Tea</h4>
+                        <h4 class="text-[#1C1C1C] text-xl font-extrabold pt-3 pb-1">Milk Tea</h4>
                         <p class="text-gray-500 font-medium text-xs">Creamer could be replaced by fresh milk</p>
                     </div>
                 </div>
                 <div class="py-5 px-10 bg-gray-100 rounded-xl shadow-md">
                     <img class="pt-4 mx-auto" src="images/tea-2.png" alt="">
                     <div class="text-center">
-                        <h4 class="text-xl font-extrabold pt-3 pb-1">Black Tea</h4>
+                        <h4 class="text-[#1C1C1C] text-xl font-extrabold pt-3 pb-1">Black Tea</h4>
                         <p class="text-gray-500 font-medium text-xs">Creamer could be replaced by fresh milk</p>
                     </div>
                 </div>
                 <div class="py-5 px-10 bg-gray-100 rounded-xl shadow-md">
                     <img class="pt-4 mx-auto" src="images/tea-3.png" alt="">
                     <div class="text-center">
-                        <h4 class="text-xl font-extrabold pt-3 pb-1">Lemon Tea</h4>
+                        <h4 class="text-[#1C1C1C] text-xl font-extrabold pt-3 pb-1">Lemon Tea</h4>
                         <p class="text-gray-500 font-medium text-xs">Creamer could be replaced by fresh milk</p>
                     </div>
                 </div>
                 <div class="py-5 px-10 bg-gray-100 rounded-xl shadow-md">
                     <img class="pt-4 mx-auto" src="images/tea-4.png" alt="">
                     <div class="text-center">
-                        <h4 class="text-xl font-extrabold pt-3 pb-1">Green Tea</h4>
+                        <h4 class="text-[#1C1C1C] text-xl font-extrabold pt-3 pb-1">Green Tea</h4>
                         <p class="text-gray-500 font-medium text-xs">Creamer could be replaced by fresh milk</p>
                     </div>
                 </div>
+            </div>
+        </section>
+        <!-- Great tea section -->
+        <section>
+            <!-- great tea container -->
+            <div class="grid grid-cols-1 sm:mb-24 lg:grid-cols-2  mb-32 items-center">
+                <!-- image -->
+                <div class="grid grid-cols-2 grid-rows-3 gap-4 w-11/12">
+                    <div class="h-38 bg-gradient-to-r from-red-100 to-orange-100 rounded-xl">
+                    </div>
+                    <div class="bg-gradient-to-r from-red-100 to-orange-100 rounded-xl row-span-2">
+                        <img class="mx-auto py-5" src="images/fresh-1.png" alt="">
+                    </div>
+                    <div class="bg-gradient-to-r from-stone-200 to-stone-100 rounded-xl row-span-2">
+                        <img class="mx-auto py-5" src="images/fresh-2.png" alt="">
+                    </div>
+                    <div class="h-38 bg-gradient-to-r from-stone-200 to-stone-100 rounded-xl">
+                    </div>
+                </div>
+                <!-- text -->
+                <div>
+                    <h2 class="font-extrabold text-5xl pb-5 text-[#1C1C1C]">Great Tea, Freshly Presented</h2>
+                    <p>
+                        The meaning of gong cha is chanese is to provide the best tea to emperor from all possessions . It represents the highest quality and self expectation. Establishing in 2006, Gong cha had been deeply appreciated by its custoers  because of good words of mouth and unique customized service orginated from Taiwan.
+                    </p>
+                    <br>
+                    <h5 class="text-xl font-extrabold text-[#1C1C1C] pb-2">Unique Taste</h5>
+                    <p>
+                        A Unique and different style from other teapots gives a luxurious and minimalist impression
+                    </p>
+                    <br>
+                    <h5 class="text-xl font-extrabold text-[#1C1C1C] pb-2">Premium Quality</h5>
+                    <p>
+                        Premium Quality that makes tea more elegant and more durable when you use it.
+                    </p>
+                </div> 
             </div>
         </section>
     </main>
