--- a/index.html
+++ b/index.html
@@ -119,9 +119,9 @@
         <!-- Great tea section -->
         <section>
             <!-- great tea container -->
-            <div class="grid grid-cols-1 sm:mb-24 w-full lg:grid-cols-2  mb-32 items-center">
+            <div class="grid grid-cols-1 lg:grid-cols-2  mb-32 items-center">
                 <!-- image -->
-                <div class="grid grid-cols-2 grid-rows-3 gap-4 lg:w-11/12">
+                <div class="grid grid-cols-2 grid-rows-3 w-full mb-24 gap-4 lg:w-11/12">
                     <div class="h-38 bg-gradient-to-r from-red-100 to-orange-100 rounded-xl">
                     </div>
                     <div class="bg-gradient-to-r from-red-100 to-orange-100 rounded-xl row-span-2">
